// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaneContainerComponent test should be resize if notification console is expanded 1`] = `
<StyledPanelBase
  closeButtonAriaLabel="Close"
  customWidth="440px"
  headerClassName="panelHeader"
  headerText="test"
  isFooterAtBottom={true}
  isLightDismiss={true}
  isOpen={true}
  onDismiss={[Function]}
  style={
    Object {
      "height": "516px",
    }
  }
  styles={
    Object {
      "commands": Object {
        "marginTop": 8,
        "paddingTop": 0,
      },
      "content": Object {
        "padding": 0,
      },
      "header": Object {
        "padding": "0 0 8px 34px",
      },
      "navigation": Object {
        "borderBottom": "1px solid #cccccc",
      },
    }
  }
  type={7}
>
  <div />
</StyledPanelBase>
`;

exports[`PaneContainerComponent test should render nothing if content is undefined 1`] = `<Fragment />`;

exports[`PaneContainerComponent test should render with panel content and header 1`] = `
<StyledPanelBase
  closeButtonAriaLabel="Close"
  customWidth="440px"
  headerClassName="panelHeader"
  headerText="test"
  isFooterAtBottom={true}
  isLightDismiss={true}
  isOpen={true}
  onDismiss={[Function]}
  style={
    Object {
      "height": "736px",
    }
  }
  styles={
    Object {
      "commands": Object {
        "marginTop": 8,
        "paddingTop": 0,
      },
      "content": Object {
        "padding": 0,
      },
      "header": Object {
        "padding": "0 0 8px 34px",
      },
      "navigation": Object {
        "borderBottom": "1px solid #cccccc",
      },
    }
  }
  type={7}
>
  <div />
</StyledPanelBase>
`;
